--- a/academy2.html
+++ b/academy2.html
@@ -604,7 +604,9 @@
                     <i class="ic-chevron-right text-[11px] font-bold shadow-[0_4px_4px_0_rgba(0,0,0,0.03)]"></i>
                 </a>
             </li>
-            <li class="  border-4 border-secondary-200 border-b-transparent rounded-full w-10 h-10 animate-spin"></li>
+            <li class="">
+                <span class=" border-4 border-secondary-200 border-b-transparent rounded-full w-10 h-10 animate-spin block"></span>
+            </li>
         </ul>
     </div>
 
@@ -645,7 +647,7 @@
 <footer class=" bg-black w-full relative   overflow-hidden">
     <div class="bg-black/80 absolute w-full h-full left-0 top-0 z-[5] backdrop-blur-[10px]"></div>
     <figure class="absolute z-[3] left-1/2 top-[30%] mm:top-1/2 -translate-1/2 w-[70%] mm:w-220">
-        <img src="/assets/webp/sustainera.webp" class="w-full h-full" alt="SUSTAINERA">
+        <img src="/assets/images/sustainera.webp" class="w-full h-full" alt="SUSTAINERA">
     </figure>
     <div class="z-10 h-full py-15 mm:py-30 md:pb-39 relative">
         <div class="container">
