--- a/insights.html
+++ b/insights.html
@@ -381,7 +381,8 @@
         </div>
 
     </header>
-    <main class="w-full overflow-hidden  bg-linear-to-b from-white/100 via-black/8 via-15%  to-black/8 backdrop-blur-[35px]  z-10   relative inset-shadow-container">
+    <main class="w-full overflow-hidden   z-10   relative inset-shadow-container">
+        <div class="absolute top-0 left-0 w-full h-full flex -z-20  bg-linear-to-b from-white/100 via-black/8 via-15%  to-black/8 backdrop-blur-[35px]"></div>
 
 
         <section class="mt-20 md:mt-30">
@@ -448,7 +449,7 @@
                 <h2 class="t-f24-bold mm:t-f32-bold lg:t-f48-semibold">INSIGHTS</h2>
             </div>
             <div class="mt-15 container px-0">
-                <div class="min-h-200 rounded-[40px] border border-utility-200 bg-white/20 backdrop-blur-[10px] inset-shadow-news-container
+                <div class="min-h-200 rounded-[40px] border border-utility-200 bg-white/80 backdrop-blur-[10px] inset-shadow-news-container
                  p-9.5 md:p-20 lg:p-29.5
                 ">
                     
@@ -637,7 +638,9 @@
                     <i class="ic-chevron-right text-[11px] font-bold shadow-[0_4px_4px_0_rgba(0,0,0,0.03)]"></i>
                 </a>
             </li>
-            <li class="  border-4 border-secondary-200 border-b-transparent rounded-full w-10 h-10 animate-spin"></li>
+            <li class="">
+                <span class=" border-4 border-secondary-200 border-b-transparent rounded-full w-10 h-10 animate-spin block"></span>
+            </li>
         </ul>
     </div>
 
@@ -678,7 +681,7 @@
 <footer class=" bg-black w-full relative   overflow-hidden">
     <div class="bg-black/80 absolute w-full h-full left-0 top-0 z-[5] backdrop-blur-[10px]"></div>
     <figure class="absolute z-[3] left-1/2 top-[30%] mm:top-1/2 -translate-1/2 w-[70%] mm:w-220">
-        <img src="/assets/webp/sustainera.webp" class="w-full h-full" alt="SUSTAINERA">
+        <img src="/assets/images/sustainera.webp" class="w-full h-full" alt="SUSTAINERA">
     </figure>
     <div class="z-10 h-full py-15 mm:py-30 md:pb-39 relative">
         <div class="container">
