--- a/resources.html
+++ b/resources.html
@@ -362,15 +362,16 @@
         </figure>
         <div class="container pb-15 pt-75 md:pt-100 h-full relative z-10">
             <div class="flex flex-col justify-end h-full ">
-                <h1 class="t-f24-bold md:t-f48-bold text-white cursor-default">Resources</h1>
-
-                <div class=" mt-5 md:mt-15">
+                <div class="">
                     <ul class=" breadcrumb">
                         <li><a href="/">Home</a></li>
                         <li>Resources</li>
 
                     </ul>
                 </div>
+                <h1 class="t-f24-bold md:t-f48-bold text-white cursor-default">Resources</h1>
+
+
 
                 <div class="mt-10 md:mt-15 grid grid-cols-2 lg:grid-cols-3 gap-5 md:gap-10">
                                             <div class=" cursor-default px-4 lg:px-10 py-10 md:py-15 xl:p-15 backdrop-blur-[50px] border border-white-20 bg-black-10 w-full rounded-[20px] flex flex-col items-center gap-y-5 md:gap-y-10">
@@ -391,7 +392,9 @@
         </div>
 
     </header>
-    <main class=" w-full overflow-hidden  bg-linear-to-b from-white/100 via-black/8 via-15%  to-black/8 backdrop-blur-[35px]  z-10   relative inset-shadow-container">
+    <main class=" w-full overflow-hidden  z-10   relative inset-shadow-container">
+        <div class="absolute top-0 left-0 w-full h-full flex -z-20  bg-linear-to-b from-white/100 via-black/8 via-15%  to-black/8 backdrop-blur-[35px]"></div>
+
         <section class="mt-20 md:mt-30">
             <div class="container">
                 <div class="grid grid-cols-1 mm:grid-cols-2 gap-15 place-content-center ">
@@ -524,7 +527,7 @@
 <footer class=" bg-black w-full relative   overflow-hidden">
     <div class="bg-black/80 absolute w-full h-full left-0 top-0 z-[5] backdrop-blur-[10px]"></div>
     <figure class="absolute z-[3] left-1/2 top-[30%] mm:top-1/2 -translate-1/2 w-[70%] mm:w-220">
-        <img src="/assets/webp/sustainera.webp" class="w-full h-full" alt="SUSTAINERA">
+        <img src="/assets/images/sustainera.webp" class="w-full h-full" alt="SUSTAINERA">
     </figure>
     <div class="z-10 h-full py-15 mm:py-30 md:pb-39 relative">
         <div class="container">
