--- a/about.html
+++ b/about.html
@@ -398,7 +398,8 @@
         </div>
 
     </header>
-    <main class="pb-30 w-full overflow-hidden  bg-linear-to-b from-white/100 via-black/8 via-15%  to-black/8 backdrop-blur-[35px]  z-10   relative inset-shadow-container">
+    <main class="pb-30 w-full overflow-hidden    z-10   relative inset-shadow-container">
+        <div class="absolute top-0 left-0 w-full h-full flex -z-20  bg-linear-to-b from-white/100 via-black/8 via-15%  to-black/8 backdrop-blur-[35px]"></div>
 
         <section class="">
             <div class="container">
@@ -746,7 +747,7 @@
 <footer class=" bg-black w-full relative   overflow-hidden">
     <div class="bg-black/80 absolute w-full h-full left-0 top-0 z-[5] backdrop-blur-[10px]"></div>
     <figure class="absolute z-[3] left-1/2 top-[30%] mm:top-1/2 -translate-1/2 w-[70%] mm:w-220">
-        <img src="/assets/webp/sustainera.webp" class="w-full h-full" alt="SUSTAINERA">
+        <img src="/assets/images/sustainera.webp" class="w-full h-full" alt="SUSTAINERA">
     </figure>
     <div class="z-10 h-full py-15 mm:py-30 md:pb-39 relative">
         <div class="container">
