--- a/regulations.html
+++ b/regulations.html
@@ -362,15 +362,15 @@
         </figure>
         <div class="container pb-15 pt-75 md:pt-100 h-full relative z-10">
             <div class="flex flex-col justify-end h-full ">
-                <h1 class="t-f24-bold md:t-f48-bold text-white cursor-default">Regulations, Disclosures & Standards</h1>
-
-                <div class=" mt-5 md:mt-15">
+                <div class="">
                     <ul class=" breadcrumb">
                         <li><a href="/">Home</a></li>
                         <li><a href="/resources">Resources</a></li>
-                        <li>Regulations, Disclosures & Standards</li>
                     </ul>
                 </div>
+                <h1 class="t-f24-bold md:t-f48-bold text-white cursor-default">Regulations, Disclosures & Standards</h1>
+
+
 
                 <div class="mt-10 md:mt-15 flex flex-col  gap-10 p-10 rounded-[20px] border-2 border-utility-200 bg-white-75 backdrop-blur-[50px]  ">
                     <span>Services</span>
@@ -405,11 +405,12 @@
         </div>
 
     </header>
-    <main class="w-full overflow-hidden  bg-linear-to-b from-white/100 via-black/8 via-15%  to-black/8 backdrop-blur-[35px]  z-10   relative inset-shadow-container">
+    <main class="w-full overflow-hidden    z-10   relative inset-shadow-container">
+        <div class="absolute top-0 left-0 w-full h-full flex -z-20  bg-linear-to-b from-white/100 via-black/8 via-15%  to-black/8 backdrop-blur-[35px]"></div>
 
         <section class="mt-20 md:mt-30">
             <div class="container px-0">
-                <div class="min-h-200 rounded-[40px] border border-utility-200 bg-white/20 backdrop-blur-[10px] inset-shadow-news-container
+                <div class="min-h-200 rounded-[40px] border border-utility-200 bg-white/80 backdrop-blur-[10px] inset-shadow-news-container
                  p-9.5 md:p-20 lg:p-29.5
                 ">
                     
@@ -592,7 +593,9 @@
                     <i class="ic-chevron-right text-[11px] font-bold shadow-[0_4px_4px_0_rgba(0,0,0,0.03)]"></i>
                 </a>
             </li>
-            <li class="  border-4 border-secondary-200 border-b-transparent rounded-full w-10 h-10 animate-spin"></li>
+            <li class="">
+                <span class=" border-4 border-secondary-200 border-b-transparent rounded-full w-10 h-10 animate-spin block"></span>
+            </li>
         </ul>
     </div>
 
@@ -633,7 +636,7 @@
 <footer class=" bg-black w-full relative   overflow-hidden">
     <div class="bg-black/80 absolute w-full h-full left-0 top-0 z-[5] backdrop-blur-[10px]"></div>
     <figure class="absolute z-[3] left-1/2 top-[30%] mm:top-1/2 -translate-1/2 w-[70%] mm:w-220">
-        <img src="/assets/webp/sustainera.webp" class="w-full h-full" alt="SUSTAINERA">
+        <img src="/assets/images/sustainera.webp" class="w-full h-full" alt="SUSTAINERA">
     </figure>
     <div class="z-10 h-full py-15 mm:py-30 md:pb-39 relative">
         <div class="container">
